--- a/7.部署.md
+++ b/7.部署.md
@@ -6,8 +6,6 @@
 ```shell
 cd /home/GoProject/src/github.com/hyperledger/fabric-samples/first-network
 ./byfn.sh down
-../bin/cryptogen generate --config=./crypto-config.yaml
-../bin/configtxgen --profile TwoOrgsOrdererGenesis
 ./byfn.sh generate
 ./byfn.sh up
 ```
@@ -42,7 +40,7 @@ configtxgen -profile # correct
 
 3. 顯示配置檔案：
 * 檢視指令：cryptogen showtemplate
-* 默認位置：/fabric-samples/first-network/crypto-config.yamlV
+* 默認位置：/fabric-samples/first-network/crypto-config.yaml
 * 分析配置檔案 (之後會於MSP更詳盡介紹配置檔案目錄結構)
 
 4. 指定生成密鑰憑證資料夾：
